<!DOCTYPE resources [
    <!ENTITY app_name "Telegram Clone">
]>

<resources>
    <string name="app_name">&app_name;</string>

    <string name="frw_welcome_title_top">The world\'s <b>fastest</b> messaging app.</string>
    <string name="frw_welcome_title_bottom">It is <b>free</b> and <b>secure</b>.</string>
    <string name="frw_welcome_button">Start Messaging</string>

    <string name="frw_enter_phone_toolbar_title">Your phone</string>
    <string name="frw_hint_input_phone_number"><b>--- --- ----</b></string>

    <string name="frw_confirm_phone_toolbar_title">Phone verification</string>
    <string name="frw_confirm_phone_title">Enter code</string>
    <string name="frw_confirm_phone_description">We\'ve sent an SMS with an activation code to your phone</string>
    <string name="default_phone">+7 (123) 456\-78\-90</string>
    <string name="frw_confirm_phone_by_call">Telegram will call you in 2:00</string>

    <string name="nav_menu_new_group">New Group</string>
    <string name="nav_menu_new_secret_chat">New Secret Chat</string>
    <string name="nav_menu_new_channel">New Channel</string>
    <string name="nav_menu_contacts">Contacts</string>
    <string name="nav_menu_calls">Calls</string>
    <string name="nav_menu_saved_messages">Saved Messages</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_invite_friends">Invite Friends</string>
    <string name="nav_menu_telegram_faq">&app_name; FAQ</string>

    <string name="chats_start_title">Welcome to &app_name;</string>
    <string name="chats_start_help_to_start_message">Start messaging by tapping the pencil button in the bottom right corner</string>
    <string name="chats_start_contacts_list_title">Your contacts on &app_name;</string>
    <string name="calls_start_text">You haven\'t made any calls yet.</string>
</resources>
