<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/new_group_fragment"
            android:icon="@drawable/ic_new_group"
            android:title="@string/nav_menu_new_group" />

        <item
            android:id="@+id/new_secret_chat_fragment"
            android:icon="@drawable/ic_new_secret_chat"
            android:title="@string/nav_menu_new_secret_chat" />

        <item
            android:id="@+id/new_channel_fragment"
            android:icon="@drawable/ic_new_channel"
            android:title="@string/nav_menu_new_channel" />

        <item
            android:id="@+id/contacts_fragment"
            android:icon="@drawable/ic_contacts"
            android:title="@string/nav_menu_contacts" />

        <item
            android:id="@+id/calls_fragment"
            android:icon="@drawable/ic_calls"
            android:title="@string/nav_menu_calls" />

        <item
            android:id="@+id/saved_messages_fragment"
            android:icon="@drawable/ic_saved_messages"
            android:title="@string/nav_menu_saved_messages" />

        <item
            android:id="@+id/settings_fragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_menu_settings" />

        <item
            android:id="@+id/invite_friends_fragment"
            android:icon="@drawable/ic_invite_friends"
            android:title="@string/nav_menu_invite_friends" />

        <item
            android:id="@+id/telegram_faq_fragment"
            android:icon="@drawable/ic_telegram_faq"
            android:title="@string/nav_menu_telegram_faq" />
    </group>
</menu>